--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ deploy {
 }
 
 // Set this to true to enable desktop support.
-def includeDesktopSupport = false
+def includeDesktopSupport = true
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
@@ -53,7 +53,7 @@ dependencies {
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
     testImplementation 'junit:junit:4.12'
-    compile 'org.mockito:mockito-core:3.5.11'
+    testCompile 'org.mockito:mockito-core:3.5.11'
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
